# newbie-wgpu

./: Cargo.toml  README.md
src/: camera.rs  instance.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
